[package]
name = "moisrs"
version = "0.2.0"
authors = ["Momozor <momozor4@gmail.com>"]
edition = "2018"
description = "Generate and view informal software requirement specification (SRS) easily."
readme = "README.md"
homepage = "https://github.com/momozor/moisrs"
repository = "https://github.com/momozor/moisrs"
license = "GPL-3.0-or-later"
keywords = ["cli", "utility", "productivity"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
prettytable-rs = "0.8"
promptly = "0.3.0"
clap = "3.0.0-beta.2"